@@ -1,5 +1,6 @@
 Changes in 1.4.3-stable:
  o include Content-Length in reply for HTTP/1.0 requests with keep-alive
+ o Patch from Tani Hosokawa: make some functions in http.c threadsafe.
 
 Changes in 1.4.2-rc:
  o remove pending timeouts on event_base_free()
